fixed mock issue for java 21